# chat-app-slight

./: .gitignore  Cargo.toml  Makefile  README.md
chat/client/: Cargo.toml  index.html
chat/client/src/: main.rs
chat/server/: Cargo.toml  Dockerfile  README.md  slightfile.toml
chat/server/src/: lib.rs  message.rs
