[package]
name = "chat-client"
version = "0.1.0"
edition = "2021"
authors = ["DeisLabs Engineering Team"]

[dependencies]
yew = "0.19"
wasm-bindgen-futures = "0.4"
gloo-net = "0.2"
serde = { version = "1", features = ["derive"]}
wasm-bindgen = "0.2"
gloo = "0.8"

[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlInputElement",
	"Storage"
]